--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -540,7 +540,7 @@
                           }
                         },
                         "scale-x": {
-                          "min-value": 1383292800000,
+                          "min-value": 1684962000011,
                           "shadow": 0,
                           "step": 3600000,
                           "transform": {
@@ -562,7 +562,7 @@
                             "line-style": "dashed"
                           },
                           "label": {
-                            "text": "Page Views",
+                            "text": "Milliseconds",
                           },
                           "minor-ticks": 0,
                           "thousands-separator": ","
