--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -21,7 +21,7 @@
             var chrome_num = 0, firefox_num = 0, safari_num = 0, ie_num = 0, other_num = 0;
             axios.get(`/api/static/`)
                 .then(response => {
-                    // console.log(response.data);
+                    console.log(response.data);
                     let data = response.data;
                     for(let i = 0; i < data.length; i++) {
                         let value = data[i];
@@ -502,7 +502,7 @@
                 .then(response => {
                     let start_load = [], end_load = [], total_time = [];
                     let data = response.data;
-                    console.log(data);
+                    // console.log(data);
                     for(let i = 0; i < data.length; i++) {
                         let value = data[i];
                         // console.log("value" + value)
