--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -363,6 +363,10 @@
                                 zh_cookie++;
                             }
                         }
+                        console.log("en_JS" + en_JS);
+                        console.log("en_cookie" + en_cookie);
+                        console.log("zh_JS" + zh_JS);
+                        console.log("zh_cookie" + zh_cookie);
                     }
 
 
