--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -343,7 +343,7 @@
                     let en_JS = 0, zh_JS = 0;
                     let en_cookie = 0, zh_cookie = 0;
                     let data = response.data;
-                    console.log(data);
+                    // console.log(data);
                     for(let i = 0; i < data.length; i++) {
                         let value = data[i];
                         // console.log("value" + value)
@@ -363,10 +363,10 @@
                                 zh_cookie++;
                             }
                         }
-                        console.log("en_JS" + en_JS);
-                        console.log("en_cookie" + en_cookie);
-                        console.log("zh_JS" + zh_JS);
-                        console.log("zh_cookie" + zh_cookie);
+                        // console.log("en_JS" + en_JS);
+                        // console.log("en_cookie" + en_cookie);
+                        // console.log("zh_JS" + zh_JS);
+                        // console.log("zh_cookie" + zh_cookie);
                     }
 
 
@@ -430,7 +430,7 @@
                         "item": {
                             "font-color": "#7e7e7e"
                         },
-                        "values": "0:60:10",
+                        "values": "0:80:10",
                         "guide": {
                             "visible": true
                         },
